crates/gwt-tui/tests/snapshots/snapshot_e2e__branches_detail_actions.snap
---
source: crates/gwt-tui/tests/snapshot_e2e.rs
expression: output
---
┌ Branches │ Issues │ PRs │ Profiles │ ┐  ▶ Shell
│┌Branches────────────────────────────┐│┌Shell─────────────────────────────────┐
││ View: All | Sort: Default          │││Session: Shell (80x24)                │
│└────────────────────────────────────┘││                                      │
│┌────────────────────────────────────┐││                                      │
││── Main ──                          │││                                      │
││* [L] main                          │││                                      │
││── Feature ──                       │││                                      │
││  [L] feature/api                   │││                                      │
││  [L] feature/app-shell             │││                                      │
││── Other ──                         │││                                      │
│└────────────────────────────────────┘││                                      │
│┌Detail──────────────────────────────┐││                                      │
││ Overview │ SPECs │ Git │ Sessions ││││                                      │
│└────────────────────────────────────┘││                                      │
│┌Actions─────────────────────────────┐││                                      │
││▶ Launch Agent                      │││                                      │
││  Open Shell                        │││                                      │
││  Delete Worktree                   │││                                      │
││                                    │││                                      │
││                                    │││                                      │
││                                    │││                                      │
│└────────────────────────────────────┘│└──────────────────────────────────────┘
└──────────────────────────────────────┘ ▣ Shell  [Mgmt]  /tmp/test-repo  Ctrl+G
