crates/gwt-tui/tests/snapshots/snapshot_e2e__branches_detail_split.snap
---
source: crates/gwt-tui/tests/snapshot_e2e.rs
expression: output
---
┌ Branches │ Specs │ Issues │ PRs │ Pro┐┌ ▶ Shell ─────────────────────────────┐
│ View: All │ Sort: Default            ││Session: Shell (80x24)                │
│main ○ *                              ││                                      │
│feature/api ○                         ││                                      │
│feature/app-shell ○                   ││                                      │
│origin/release/1.0 ○                  ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘│                                      │
┌ Overview │ SPECs │ Git │ Sessions  · ┐│                                      │
│Overview                              ││                                      │
│ Branch: main (HEAD)                  ││                                      │
│ Category: Main                       ││                                      │
│ Type: Local                          ││                                      │
│                                      ││                                      │
│ Docker status                        ││                                      │
│ No containers found                  ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
 ▣ Sh  br:main  [G]  ↑↓ mv  ←→ tab  ↵ wiz  S↵ sh  Sp dtl  ^C del  mvf?  Esc→T
