crates/gwt-tui/tests/snapshots/snapshot_e2e__branches_tab.snap
---
source: crates/gwt-tui/tests/snapshot_e2e.rs
assertion_line: 198
expression: output
---
 GWT v8.17.2 | /tmp/test-repo | 0 branch┌ ▶ Shell ─────────────────────────────┐
┌ Branches │ Specs │ Issues │ PRs │ Pro┐│Session: Shell (80x24)                │
│ View: All │ Sort: Default            ││                                      │
│No branches loaded                    ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘│                                      │
┌ Overview │ SPECs │ Git │ Sessions ───┐│                                      │
│Overview                              ││                                      │
│ No branch selected                   ││                                      │
│                                      ││                                      │
│ Docker status                        ││                                      │
│ No containers found                  ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
 ▣ Shell  branch: n/a  type: Shell  [Mgmt]  /tmp/test-repo  ↑↓:move  ←→:tab  Ent
