crates/gwt-tui/tests/snapshots/snapshot_e2e__e2e_key_flow_settings.snap
---
source: crates/gwt-tui/tests/snapshot_e2e.rs
assertion_line: 883
expression: output
---
╔...│ Versions │ Settings │ Logs ══════╗╭ › Shell ─────────────────────────────╮
║ General │ Worktree │ Agent │ Custom A║│Session: Shell (78x21)                │
║General Enter: edit/apply | Space: tog║│                                      │
║[T] Theme: dark                       ║│                                      │
║[T] Language: en                      ║│                                      │
║[B] Auto-save: true                   ║│                                      │
║[T] Log level: info                   ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
╚══════════════════════════════════════╝╰──────────────────────────────────────╯
 ⎇n/a  │  P:default  │  ↑↓ sel  ↵ apply  Sp tog  [] cat  C-g Tab  Esc t  ?
