crates/gwt-tui/tests/snapshots/snapshot_e2e__e2e_key_flow_specs.snap
---
source: crates/gwt-tui/tests/snapshot_e2e.rs
expression: output
---
┌Management────────────────┐  ▶ Shell
│ Branches │ Specs │ Issues│┌Shell─────────────────────────────────────────────┐
└──────────────────────────┘│Session: Shell (80x24)                            │
┌Specs─────────────────────┐│                                                  │
│ Specs (0/0)  | Press '/' ││                                                  │
└──────────────────────────┘│                                                  │
┌──────────────────────────┐│                                                  │
│No specs loaded           ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          │└──────────────────────────────────────────────────┘
└──────────────────────────┘ ▣ Shell  [Mgmt]  /tmp/test-repo  Ctrl+G,? Help
