crates/gwt-tui/tests/snapshots/snapshot_e2e__error_overlay.snap
---
source: crates/gwt-tui/tests/snapshot_e2e.rs
expression: output
---
 GWT v8.17.2 | /tmp/test-repo | 0 branch┌ ▶ Shell ─────────────────────────────┐
┌ Branches │ Issues │ PRs │ Profiles │ ┐│Session: Shell (80x24)                │
│ View: All │ Sort: Default            ││                                      │
│No branches loaded                    ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│               ┌Error─────────────────────────────────────────┐               │
│               │Something went wrong                          │               │
│               │                                              │               │
└───────────────│Press Enter or Esc to dismiss                 │               │
┌ Overview │ SPE│                                              │               │
│Overview       │                                              │               │
│ No branch sele└──────────────────────────────────────────────┘               │
│                                      ││                                      │
│ Docker status                        ││                                      │
│ No containers found                  ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
↑↓:move  ←→:tab  Enter:wizard  Shift+Enter:shell  Space:detail  Ctrl+C:delete  m
