crates/gwt-tui/tests/snapshots/snapshot_e2e__git_view_tab.snap
---
source: crates/gwt-tui/tests/snapshot_e2e.rs
assertion_line: 161
expression: output
---
┌Management────────────────────────────┐  ▶ Shell
│ Branches │ Issues │ PRs │ Profiles │ │┌Shell─────────────────────────────────┐
└──────────────────────────────────────┘│Session: Shell (80x24)                │
┌──────────────────────────────────────┐│                                      │
│┌Files (0)───────────────────────────┐││                                      │
││No changed files                    │││                                      │
││                                    │││                                      │
││                                    │││                                      │
││                                    │││                                      │
││                                    │││                                      │
││                                    │││                                      │
││                                    │││                                      │
││                                    │││                                      │
││                                    │││                                      │
│└────────────────────────────────────┘││                                      │
│┌Commits (0)─────────────────────────┐││                                      │
││No commits loaded                   │││                                      │
││                                    │││                                      │
││                                    │││                                      │
││                                    │││                                      │
││                                    │││                                      │
││                                    │││                                      │
│└────────────────────────────────────┘│└──────────────────────────────────────┘
└──────────────────────────────────────┘ ▣ Shell  [Mgmt]  /tmp/test-repo  Ctrl+G
