crates/gwt-tui/tests/snapshots/snapshot_e2e__initial_management_layer.snap
---
source: crates/gwt-tui/tests/snapshot_e2e.rs
expression: output
---
┌ Branches │ Issues │ PRs │ Profiles │ ┐┌ ▶ Shell ─────────────────────────────┐
│ View: All │ Sort: Default            ││Session: Shell (80x24)                │
│No branches loaded                    ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘│                                      │
┌ Overview │ SPECs │ Git │ Sessions ───┐│                                      │
│Overview                              ││                                      │
│ No branch selected                   ││                                      │
│                                      ││                                      │
│ Docker status                        ││                                      │
│ No containers found                  ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
↑↓:select  ←→:tab  Ctrl+←→:sub-tab  Enter:action  Tab:focus  ?:help
