crates/gwt-tui/tests/snapshots/snapshot_e2e__initialization_clone_wizard.snap
---
source: crates/gwt-tui/tests/snapshot_e2e.rs
assertion_line: 340
expression: output
---

          ╔═════════════════ gwt — Clone Repository ═════════════════╗
          ║                         ╭─ gwt ─╮                        ║
          ║                         │ ◆ ◇ ◆ │                        ║
          ║                         ╰───────╯                        ║
          ║                                                          ║
          ║   Enter a repository URL to clone into this directory.   ║
          ║                                                          ║
          ║                                                          ║
          ║Repository URL:                                           ║
          ║╭────────────────────────────────────────────────────────╮║
          ║│█                                                       │║
          ║╰────────────────────────────────────────────────────────╯║
          ║                                                          ║
          ║                   Enter Clone  Esc Exit                  ║
          ║                                                          ║
          ║                                                          ║
          ╚══════════════════════════════════════════════════════════╝
